[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Objects/TextBubble.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font33_outline.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sounds/guide/blah.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/guide/ha.wav" type="AudioStream" id=6]

[node name="TextBubble" type="Node2D"]
script = ExtResource( 1 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = -55.0
margin_top = -59.0
margin_right = 55.0
margin_bottom = 8.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Why you are here? Cuz I've brought you back.[/center]"
text = "Why you are here? Cuz I've brought you back."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SndHa" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "Sounds"

[node name="SndBlah" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "Sounds"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
